Fixed some issues with executables